--- a/Common Task/Report/report.ipynb
+++ b/Common Task/Report/report.ipynb
@@ -197,6 +197,26 @@
     "\n",
     "The addition of previous day's temperature has improved the model significantly. Now it is better able to handle the fluctuations in temperature. My thoughts at this point are to add more features to the model. Possibly more climate data such as humidity, wind speed or precipitation."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Updating the data_builder script\n",
+    "\n",
+    "The data above was constructed using data_builder_v1. I will update the script to include more features from the open-meteo api.\n",
+    "\n",
+    "![Example Image](../images/other/open_meteo_vars.JPG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Report updates\n",
+    "\n",
+    "Now that I have much more data. I am going to start by including a few more, as well as add standarization, and see the new performance of the model."
+   ]
   }
  ],
  "metadata": {
