--- a/Common Task/models/multi_model_tester.ipynb
+++ b/Common Task/models/multi_model_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "4                    2.140070  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,6 +271,75 @@
     "\n",
     "# Transform the testing data using the same scaler\n",
     "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import LSTM, Dense\n",
+    "\n",
+    "# Reshape the input data for LSTM\n",
+    "X_train_scaled = X_train_scaled.reshape(X_train_scaled.shape[0], 1, X_train_scaled.shape[1])\n",
+    "X_test_scaled = X_test_scaled.reshape(X_test_scaled.shape[0], 1, X_test_scaled.shape[1])\n",
+    "\n",
+    "# Create and train the LSTM model\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(64, input_shape=(1, X_train_scaled.shape[2])))\n",
+    "model.add(Dense(1))\n",
+    "model.compile(optimizer='adam', loss='mse')\n",
+    "model.fit(X_train_scaled, y_train, epochs=100, batch_size=32, verbose=1)\n",
+    "\n",
+    "# Make predictions on the scaled testing set\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "# Evaluate the model's performance\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"explained_variance_score:\", explained_variance_score(y_test, y_pred))\n",
+    "\n",
+    "# Get the corresponding dates for the testing set\n",
+    "test_dates = data['date'].iloc[-len(X_test):]\n",
+    "\n",
+    "# Plot the actual vs. predicted temperatures\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(test_dates, y_test, label='Actual')\n",
+    "plt.plot(test_dates, y_pred, label='Predicted')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Maximum Temperature')\n",
+    "plt.title('Actual vs. Predicted Maximum Temperatures (LSTM)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot a smaller subset of the data\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(test_dates[:30], y_test[:30], label='Actual')\n",
+    "plt.plot(test_dates[:30], y_pred[:30], label='Predicted')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Maximum Temperature')\n",
+    "plt.title('Actual vs. Predicted Maximum Temperatures (LSTM)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -826,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
