--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "\n",
     "# Linear Regression\n",
-    "Linear regression was my first choice for tackling this projectm. I had a good amount of data, of cyclical nature, and a good model to start with could be a linear regression on the sin/cos of the day of the year to predict the temperature."
+    "Linear regression was my first choice for tackling this project. I had a good amount of data, of cyclical nature, and a good model to start with could be a linear regression on the sin/cos of the day of the year to predict the temperature."
    ]
   },
   {
@@ -326,6 +326,38 @@
     "# Results\n",
     "\n",
     "Not much of an improvement can be seen, even after adding a few more features. For now I am going to try different models, and see how they perform."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New Data Sources\n",
+    "\n",
+    "After some research, I found a reliable way to get the exact data that the Kalshi market uses. Providing aggregated daily data for the exact stations we are examining. This will be my primary source of data from now on.\n",
+    "\n",
+    "## 1. NOAA Daily Aggregated Data (For sure - Daily model)\n",
+    "url: https://scacis.rcc-acis.org/\n",
+    "\n",
+    "## 2. Open-Meteo Historical Data (For sure - Additional Features)\n",
+    "url: https://open-meteo.com/\n",
+    "\n",
+    "## 3. Global Hourly - Integrated Surface Database (Hourly Data - Intraday Model)\n",
+    "url: https://www.ncei.noaa.gov/products/land-based-station/integrated-surface-database\n",
+    "\n",
+    "## 4. 5-Minute Data (For sure - Decision Making throughout the day)\n",
+    "url: https://www.weather.gov/wrh/timeseries?site={insert_site symbol}\n",
+    "\n",
+    "## 5. WeatherAPI, OpenWeather, MeteoStat (Additional Forecast)\n",
+    "url: https://openweathermap.org/api\n",
+    "url: https://www.weatherapi.com/\n",
+    "url: https://dev.meteostat.net/\n",
+    "\n",
+    "# Codes for the stations\n",
+    "Chicago - KMDW, Elev: 617.0 ft; Lat: 41.78417, Lon: -87.75528\n",
+    "NYC - KNYC, Elev: 154.0 ft; Lat: 40.78333, Lon: -73.96667\n",
+    "Miami - KMIA, Elev: 10.0 ft; Lat: 25.79056, Lon: -80.31639\n",
+    "Austin - KAUS, Elev: 486.0 ft; Lat: 30.18304, Lon: -97.67987"
    ]
   }
  ],
