NOAA Data scraper

--- a/Common Task/organized_models/placeholder.ipynb
+++ b/Common Task/organized_models/placeholder.ipynb
@@ -2,22 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def daily_data_listing(driver):\n",
+    "    # Click on the \"Single-Station Products\" menu\n",
+    "    single_station_menu = safe_find_element(driver, By.ID, 'single')\n",
+    "    safe_click(driver, By.ID, 'single')\n",
+    "\n",
+    "    # Wait for the menu to expand and be clickable\n",
+    "    daily_data_listing = WebDriverWait(driver, 15).until(\n",
+    "        EC.element_to_be_clickable((By.ID, 'ui-id-4'))\n",
+    "    )\n",
+    "    safe_click(driver, By.ID, 'ui-id-4')\n",
+    "\n",
+    "    # Select the output format\n",
+    "    csv_label = safe_find_element(driver, By.CSS_SELECTOR, 'label[for=\"outopt_csv\"]')\n",
+    "    safe_click(driver, By.CSS_SELECTOR, 'label[for=\"outopt_csv\"]')\n",
+    "\n",
+    "    # Click on the calendar icon to open the date range picker\n",
+    "    calendar_icon = safe_find_element(driver, By.ID, 'dp_calicon')\n",
+    "    safe_click(driver, By.ID, 'dp_calicon')\n",
+    "    return\n",
+    "\n",
+    "def daily_data_listing_por(driver, symbol):\n",
+    "    # initial routine \n",
+    "    daily_data_listing(driver)\n",
+    "    \n",
+    "    # Wait for the date range picker to be visible\n",
+    "    date_range_picker = WebDriverWait(driver, 15).until(\n",
+    "        EC.visibility_of_element_located((By.CSS_SELECTOR, '.ui-daterangepicker'))\n",
+    "    )\n",
+    "\n",
+    "    # Click on the \"Period of Record\" option\n",
+    "    period_of_record = safe_find_element(driver, By.CSS_SELECTOR, '.ui-daterangepicker-PeriodofRecord')\n",
+    "    safe_click(driver, By.CSS_SELECTOR, '.ui-daterangepicker-PeriodofRecord')\n",
+    "\n",
+    "    # Click on the checkboxes\n",
+    "    click_all_checkboxes(driver)\n",
+    "\n",
+    "    # Put the symbol in the input box\n",
+    "    input_symbol(driver, symbol)\n",
+    "\n",
+    "    # Click the \"Go\" button\n",
+    "    click_go(driver)\n",
+    "\n",
+    "    # accept the pop up\n",
+    "    accept_pop_up(driver)\n",
+    "\n",
+    "    csv_content = get_csv_content(driver)\n",
+    "    \n",
+    "    return csv_content\n",
+    "\n",
+    "def daily_data_listing_7_day(driver, symbol):\n",
+    "    # initial routine \n",
+    "    daily_data_listing(driver)\n",
+    "    \n",
+    "    # Wait for the date range picker to be visible\n",
+    "    date_range_picker = WebDriverWait(driver, 15).until(\n",
+    "        EC.visibility_of_element_located((By.CSS_SELECTOR, '.ui-daterangepicker'))\n",
+    "    )\n",
+    "\n",
+    "    # Click on the \"Period of Record\" option\n",
+    "    period_of_record = safe_find_element(driver, By.CSS_SELECTOR, '.ui-daterangepicker-Last7Days')\n",
+    "    safe_click(driver, By.CSS_SELECTOR, '.ui-daterangepicker-Last7Days')\n",
+    "\n",
+    "    # Click on the checkboxes\n",
+    "    click_all_checkboxes(driver)\n",
+    "\n",
+    "    # Put the symbol in the input box\n",
+    "    input_symbol(driver, symbol)\n",
+    "\n",
+    "    # Click the \"Go\" button\n",
+    "    click_go(driver)\n",
+    "\n",
+    "    # accept the pop up\n",
+    "    accept_pop_up(driver)\n",
+    "\n",
+    "    csv_content = get_csv_content(driver)\n",
+    "    \n",
+    "    return csv_content\n",
+    "\n",
+    "def input_symbol(driver, symbol):\n",
+    "    # Wait for the station select input field to be present\n",
+    "    station_select = WebDriverWait(driver, 15).until(\n",
+    "        EC.presence_of_element_located((By.CSS_SELECTOR, '.acis-idContainer input[type=\"text\"]'))\n",
+    "    )\n",
+    "\n",
+    "    # Clear the existing value and input the symbol\n",
+    "    station_select.clear()\n",
+    "    station_select.send_keys(symbol)\n",
+    "\n",
+    "def click_all_checkboxes(driver):\n",
+    "    # Find all the checkboxes within the table\n",
+    "    checkboxes = driver.find_elements(By.CSS_SELECTOR, '.acis-multiInputTable input[type=\"checkbox\"]')\n",
+    "    \n",
+    "    # Click each checkbox using JavaScript\n",
+    "    for checkbox in checkboxes:\n",
+    "        if not checkbox.is_selected():\n",
+    "            driver.execute_script(\"arguments[0].click();\", checkbox)\n",
+    "\n",
+    "    time.sleep(2)  # Pause for 2 seconds to allow the checkboxes to be clicked\n",
+    "\n",
+    "def click_go(driver):\n",
+    "    go_button = safe_find_element(driver, By.ID, 'go')\n",
+    "    safe_click(driver, By.ID, 'go')\n",
+    "\n",
+    "def accept_pop_up(driver):\n",
+    "    WebDriverWait(driver, 15).until(EC.alert_is_present())\n",
+    "    alert = driver.switch_to.alert\n",
+    "    alert.accept()\n",
+    "\n",
+    "def get_csv_content(driver):\n",
+    "    # Wait for the CSV data to be present in the results_area\n",
+    "    csv_data = WebDriverWait(driver, 60).until(\n",
+    "        EC.presence_of_element_located((By.CSS_SELECTOR, '#results_area pre'))\n",
+    "    )\n",
+    "\n",
+    "    # Get the text content of the <pre> element\n",
+    "    csv_content = csv_data.get_attribute('textContent')\n",
+    "\n",
+    "    # Split the CSV content by newline characters\n",
+    "    csv_lines = csv_content.split('\\n')\n",
+    "\n",
+    "    return csv_lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\Spring 2024\\CS542\\Common Task\\organized_models\n",
-      "c:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\Spring 2024\\CS542\\Common Task\\organized_models\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "from utils import update_noaa_data\n",
+    "driver = get_webdriver()\n",
     "\n",
-    "update_noaa_data()"
+    "# Navigate to the website\n",
+    "url = 'https://scacis.rcc-acis.org/'\n",
+    "driver.get(url)\n",
+    "\n",
+    "# Call the function to submit the form and get the results\n",
+    "results = daily_data_listing_7_day(driver, 'KMIA')\n",
+    "\n",
+    "# Print the results\n",
+    "print(results)\n",
+    "\n",
+    "# Close the webdriver\n",
+    "driver.quit()"
    ]
   }
  ],
