--- a/Common Task/organized_models/placeholder.ipynb
+++ b/Common Task/organized_models/placeholder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,13 @@
     "    safe_click(driver, By.ID, 'ui-id-4')\n",
     "\n",
     "    # Select the output format\n",
+    "    csv_label = WebDriverWait(driver, 10).until(\n",
+    "    EC.element_to_be_clickable((By.CSS_SELECTOR, 'label[for=\"outopt_csv\"]'))\n",
+    "    )\n",
     "    csv_label = safe_find_element(driver, By.CSS_SELECTOR, 'label[for=\"outopt_csv\"]')\n",
-    "    safe_click(driver, By.CSS_SELECTOR, 'label[for=\"outopt_csv\"]')\n",
-    "\n",
+    "    #safe_click(driver, By.CSS_SELECTOR, 'label[for=\"outopt_csv\"]')\n",
+    "    driver.execute_script(\"arguments[0].click();\", csv_label)\n",
+    "    \n",
     "    # Click on the calendar icon to open the date range picker\n",
     "    calendar_icon = safe_find_element(driver, By.ID, 'dp_calicon')\n",
     "    safe_click(driver, By.ID, 'dp_calicon')\n",
@@ -94,9 +98,13 @@
     "    return csv_content\n",
     "\n",
     "def input_symbol(driver, symbol):\n",
-    "    # Wait for the station select input field to be present\n",
+    "    # Assuming `station_select_menu` is the correct trigger element\n",
+    "    station_select_menu = safe_find_element(driver, By.ID, 'station_acc')\n",
+    "    driver.execute_script(\"arguments[0].click();\", station_select_menu)\n",
+    "    \n",
+    "    # Wait for the station select input field to be visible (instead of just present)\n",
     "    station_select = WebDriverWait(driver, 15).until(\n",
-    "        EC.presence_of_element_located((By.CSS_SELECTOR, '.acis-idContainer input[type=\"text\"]'))\n",
+    "        EC.visibility_of_element_located((By.CSS_SELECTOR, '.acis-idContainer input[type=\"text\"]'))\n",
     "    )\n",
     "\n",
     "    # Clear the existing value and input the symbol\n",
@@ -119,9 +127,18 @@
     "    safe_click(driver, By.ID, 'go')\n",
     "\n",
     "def accept_pop_up(driver):\n",
-    "    WebDriverWait(driver, 15).until(EC.alert_is_present())\n",
-    "    alert = driver.switch_to.alert\n",
-    "    alert.accept()\n",
+    "    try:\n",
+    "        # Wait for the alert to be present\n",
+    "        WebDriverWait(driver, 15).until(EC.alert_is_present())\n",
+    "        \n",
+    "        # Switch to the alert and accept it\n",
+    "        alert = driver.switch_to.alert\n",
+    "        alert.accept()\n",
+    "        \n",
+    "        print(\"Pop-up alert accepted.\")\n",
+    "    except TimeoutException:\n",
+    "        # Handle the case where the alert does not appear within 15 seconds\n",
+    "        print(\"No pop-up alert to accept.\")\n",
     "\n",
     "def get_csv_content(driver):\n",
     "    # Wait for the CSV data to be present in the results_area\n",
@@ -140,14 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "No pop-up alert to accept.\n",
+      "['Data for MIAMI INTERNATIONAL AP, FLDate, MaxTemperature, MaxTemperatureNormal, MaxTemperatureDeparture, MinTemperature, MinTemperatureNormal, MinTemperatureDeparture, AvgTemperature, AvgTemperatureNormal, AvgTemperatureDeparture, AtObsTemperature, Precipitation, PrecipitationNormal, PrecipitationDeparture, Snowfall, SnowfallNormal, SnowfallDeparture, SnowDepth, HDD, HDDNormal, HDDDeparture, CDD, CDDNormal, CDDDeparture, GDD2024-03-14, 84, 80.4, 3.6, 70, 65.3, 4.7, 77.0, 72.8, 4.2, M, 0.00, 0.08, -0.08, 0.0, 0.0, 0.0, 0, 0, 0.3, -0.3, 12, 8.1, 3.9, 272024-03-15, 83, 80.5, 2.5, 73, 65.3, 7.7, 78.0, 72.9, 5.1, M, 0.00, 0.08, -0.08, 0.0, 0.0, 0.0, 0, 0, 0.3, -0.3, 13, 8.2, 4.8, 282024-03-16, 86, 80.5, 5.5, 70, 65.4, 4.6, 78.0, 73.0, 5.0, M, 0.00, 0.07, -0.07, 0.0, 0.0, 0.0, 0, 0, 0.3, -0.3, 13, 8.3, 4.7, 282024-03-17, 87, 80.6, 6.4, 72, 65.5, 6.5, 79.5, 73.1, 6.4, M, 0.00, 0.08, -0.08, 0.0, 0.0, 0.0, 0, 0, 0.3, -0.3, 15, 8.3, 6.7, 302024-03-18, 91, 80.7, 10.3, 73, 65.6, 7.4, 82.0, 73.2, 8.8, M, T, 0.08, -0.08, 0.0, 0.0, 0.0, 0, 0, 0.2, -0.2, 17, 8.4, 8.6, 322024-03-19, 79, 80.8, -1.8, 66, 65.7, 0.3, 72.5, 73.2, -0.7, M, T, 0.08, -0.08, 0.0, 0.0, 0.0, 0, 0, 0.2, -0.2, 8, 8.5, -0.5, 232024-03-20, M, 80.9, M, M, 65.8, M, M, 73.3, M, M, M, 0.08, M, M, 0.0, M, M, M, 0.2, M, M, 8.5, M, M']\n"
      ]
     }
    ],
