fixed missing day

--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -355,9 +355,25 @@
     "\n",
     "# Codes for the stations\n",
     "Chicago - KMDW, Elev: 617.0 ft; Lat: 41.78417, Lon: -87.75528\n",
+    "\n",
     "NYC - KNYC, Elev: 154.0 ft; Lat: 40.78333, Lon: -73.96667\n",
+    "\n",
     "Miami - KMIA, Elev: 10.0 ft; Lat: 25.79056, Lon: -80.31639\n",
+    "\n",
     "Austin - KAUS, Elev: 486.0 ft; Lat: 30.18304, Lon: -97.67987"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NOAA Daily Aggregated Data\n",
+    "\n",
+    "I wrote a set of util functions under the organized folder, for each one of the data sources.\n",
+    "\n",
+    "## update_noaa_data()\n",
+    "\n",
+    "This function will create 4 csv files that contain all time aggregated climate data from NOAA."
    ]
   }
  ],
