--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -373,7 +373,17 @@
     "\n",
     "## update_noaa_data()\n",
     "\n",
-    "This function will create 4 csv files that contain all time aggregated climate data from NOAA."
+    "This function will create 4 csv files that contain all time aggregated climate data from NOAA.\n",
+    "\n",
+    "## update_open_meteo_data()\n",
+    "\n",
+    "This function will create 4 csv files that contain all time aggregated climate data from Open-Meteo.\n",
+    "\n",
+    "# Importance of Sources 1 and 2.\n",
+    "\n",
+    "Source 1, is the official source that exactly tracks the values that Kalshi follows, from the exact sensors. This is the most important source. Source 1 however, might have some gaps in the data. This is where source 2 comes in. Source 2 has a lot of data, and can be used to fill in the gaps in source 1.\n",
+    "\n",
+    "![Importance of OM](images/other/om_filling.JPG)"
    ]
   }
  ],
