--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -375,7 +375,7 @@
     "\n",
     "This function will create 4 csv files that contain all time aggregated climate data from NOAA.\n",
     "\n",
-    "## update_open_meteo_data()\n",
+    "## update_OM_data()\n",
     "\n",
     "This function will create 4 csv files that contain all time aggregated climate data from Open-Meteo.\n",
     "\n",
