--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -7,10 +7,6 @@
     "# Initial Thoughts\n",
     "I wanted to start simply by using one API with extensive historical data-points. Specifically the open-meteo api which provides access to data all the way back to 1940. I collected daily data starting 01/01/1940, to present, \n",
     "\n",
-    "### Needs follow-up\n",
-    "**and hosted a google cloud function to call the api daily, and update the data.**\n",
-    "\n",
-    "\n",
     "# Linear Regression\n",
     "Linear regression was my first choice for tackling this project. I had a good amount of data, of cyclical nature, and a good model to start with could be a linear regression on the sin/cos of the day of the year to predict the temperature."
    ]
@@ -206,7 +202,7 @@
     "\n",
     "The data above was constructed using data_builder_v1. I will update the script to include more features from the open-meteo api.\n",
     "\n",
-    "![Example Image](../images/other/open_meteo_vars.JPG)"
+    "![Example Image](./images/other/open_meteo_vars.JPG)"
    ]
   },
   {
@@ -336,54 +332,113 @@
     "\n",
     "After some research, I found a reliable way to get the exact data that the Kalshi market uses. Providing aggregated daily data for the exact stations we are examining. This will be my primary source of data from now on.\n",
     "\n",
-    "## 1. NOAA Daily Aggregated Data (For sure - Daily model)\n",
+    "### 1. NOAA Daily Aggregated Daily Weather Data \n",
     "url: https://scacis.rcc-acis.org/\n",
     "\n",
-    "## 2. Open-Meteo Historical Data (For sure - Additional Features)\n",
-    "url: https://open-meteo.com/\n",
+    "### 2. Open-Meteo Daily Historical Climate Data\n",
+    "url: https://archive-api.open-meteo.com/v1/archive\n",
     "\n",
-    "## 3. Global Hourly - Integrated Surface Database (Hourly Data - Intraday Model)\n",
-    "url: https://www.ncei.noaa.gov/products/land-based-station/integrated-surface-database\n",
-    "\n",
-    "## 4. 5-Minute Data (For sure - Decision Making throughout the day)\n",
+    "### 3. NOAA WRH 5-Minute Site Data\n",
     "url: https://www.weather.gov/wrh/timeseries?site={insert_site symbol}\n",
     "\n",
-    "## 5. WeatherAPI, OpenWeather, MeteoStat (Additional Forecast)\n",
-    "url: https://openweathermap.org/api\n",
-    "url: https://www.weatherapi.com/\n",
-    "url: https://dev.meteostat.net/\n",
+    "### 4. Open-Meteo Hourly Historical Solar Radiation, and Soil Data\n",
+    "url: https://archive-api.open-meteo.com/v1/archive\n",
     "\n",
-    "# Codes for the stations\n",
+    "### 5. Open-Meteo Hourly Historical Air Quality Data\n",
+    "url: https://archive-api.open-meteo.com/v1/archive\n",
+    "\n",
+    "### Codes for the stations\n",
+    "I also noted down the exact information for the stations I am interested in.\n",
+    "\n",
     "Chicago - KMDW, Elev: 617.0 ft; Lat: 41.78417, Lon: -87.75528\n",
     "\n",
     "NYC - KNYC, Elev: 154.0 ft; Lat: 40.78333, Lon: -73.96667\n",
     "\n",
     "Miami - KMIA, Elev: 10.0 ft; Lat: 25.79056, Lon: -80.31639\n",
     "\n",
-    "Austin - KAUS, Elev: 486.0 ft; Lat: 30.18304, Lon: -97.67987"
+    "Austin - KAUS, Elev: 486.0 ft; Lat: 30.18304, Lon: -97.67987\n",
+    "\n",
+    "## NOAA Daily Aggregated Data\n",
+    "\n",
+    "I wrote a set of util functions, for each one of the data sources, for fetching the initial data, and then for updating the data.\n",
+    "\n",
+    "## Importance of Sources 1 and 2.\n",
+    "\n",
+    "Source 1, is the official source that exactly tracks the values that Kalshi follows, from the exact sensors. This is the most important source. Source 1 however, might have some gaps in the data. This is where source 2 comes in. Source 2 has a lot of data, and can be used to fill in the gaps in source 1.\n",
+    "\n",
+    "![Importance of OM](images/other/om_filling.JPG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example loader function:\n",
+    "def load_NOAA_data():\n",
+    "    data_path = \"./data\"\n",
+    "    # Get city dict\n",
+    "    city_info = get_city_info()\n",
+    "    # city_list\n",
+    "    city_list = list(city_info.keys())\n",
+    "    # for each city in city_list, look in the data folder for the file\n",
+    "    for city in city_list:\n",
+    "        city_file = f\"{data_path}/{city}_NOAA.csv\"\n",
+    "        city_station_id = city_info[city][\"station\"]\n",
+    "        driver = get_webdriver()\n",
+    "        # if the file does not exist, download the noaa data\n",
+    "        csv_historic_content = daily_data_listing_por(driver, city_station_id)\n",
+    "        df = process_daily_data_noaa_csv(csv_historic_content)\n",
+    "        driver = get_webdriver()\n",
+    "        csv_new_content = daily_data_listing_7_day(driver, city_station_id)\n",
+    "        df_new = process_daily_data_noaa_csv(csv_new_content)\n",
+    "        # Add the last row of the new data to the historic data\n",
+    "        df = pd.concat([df, df_new.tail(1)], ignore_index=True)\n",
+    "        df.to_csv(city_file, index=False)\n",
+    "        \n",
+    "# Example update function:\n",
+    "def update_NOAA_data():\n",
+    "    data_path = \"./data\"\n",
+    "    # Get city dict\n",
+    "    city_info = get_city_info()\n",
+    "    # city_list\n",
+    "    city_list = list(city_info.keys())\n",
+    "    for city in city_list:\n",
+    "        city_file = f\"{data_path}/{city}_NOAA.csv\"\n",
+    "        city_station_id = city_info[city][\"station\"]\n",
+    "        driver = get_webdriver()\n",
+    "        csv_new_content = daily_data_listing_7_day(driver, city_station_id)\n",
+    "        df_new = process_daily_data_noaa_csv(csv_new_content)\n",
+    "        old_df = pd.read_csv(city_file)\n",
+    "        old_df['Date'] = pd.to_datetime(old_df['Date'])  # Convert 'Date' to datetime\n",
+    "        last_date = old_df['Date'].iloc[-1]\n",
+    "        new_df = df_new[df_new['Date'] > last_date]\n",
+    "        today = pd.to_datetime(\"now\").date().strftime(\"%Y-%m-%d\")\n",
+    "        new_df = new_df[new_df['Date'] < today]\n",
+    "        new_df['Date'] = pd.to_datetime(new_df['Date'])  # Convert 'Date' to datetime\n",
+    "        df = pd.concat([old_df, new_df], ignore_index=True)\n",
+    "        df.to_csv(city_file, index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NOAA Daily Aggregated Data\n",
+    "# Next Model Ensemble-Regressions\n",
     "\n",
-    "I wrote a set of util functions under the organized folder, for each one of the data sources.\n",
+    "At this point, the linear regression looked tempting to use, but it seemed to me that it essentially just learned to predict the next day using the current day's temperature. I wanted to try a more complex mode, and so I decided to move on to ensemble regressions. XGBoost specifically did well, and it did not look like the model was just learning to predict the next day's temperature using the current day's temperature.\n",
     "\n",
-    "## update_noaa_data()\n",
+    "![XGBoost](images/other/xgboost.JPG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# One last complex model\n",
     "\n",
-    "This function will create 4 csv files that contain all time aggregated climate data from NOAA.\n",
-    "\n",
-    "## update_OM_data()\n",
-    "\n",
-    "This function will create 4 csv files that contain all time aggregated climate data from Open-Meteo.\n",
-    "\n",
-    "# Importance of Sources 1 and 2.\n",
-    "\n",
-    "Source 1, is the official source that exactly tracks the values that Kalshi follows, from the exact sensors. This is the most important source. Source 1 however, might have some gaps in the data. This is where source 2 comes in. Source 2 has a lot of data, and can be used to fill in the gaps in source 1.\n",
-    "\n",
-    "![Importance of OM](images/other/om_filling.JPG)"
+    "I wanted to add one more complex model to the XGBoost model, given that we are dealing with time series data. I decided to use a LSTM model, and see how it performs. I implemented a basic LSTM nn, with addition linear layers, as well as an experimental LSTM with Attention. Both of these models did generally well, and were definitely not simply guessing the next day's temperature using the current day's temperature. So I have decided to make my bets based on a combination of the XGBoost and LSTM models."
    ]
   }
  ],
