changed file structure

--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -438,7 +438,9 @@
    "source": [
     "# One last complex model\n",
     "\n",
-    "I wanted to add one more complex model to the XGBoost model, given that we are dealing with time series data. I decided to use a LSTM model, and see how it performs. I implemented a basic LSTM nn, with addition linear layers, as well as an experimental LSTM with Attention. Both of these models did generally well, and were definitely not simply guessing the next day's temperature using the current day's temperature. So I have decided to make my bets based on a combination of the XGBoost and LSTM models."
+    "I wanted to add one more complex model to the XGBoost model, given that we are dealing with time series data. I decided to use a LSTM model, and see how it performs. I implemented a basic LSTM nn, with addition linear layers, as well as an experimental LSTM with Attention. Both of these models did generally well, and were definitely not simply guessing the next day's temperature using the current day's temperature. So I have decided to make my bets based on a combination of the XGBoost and LSTM models.\n",
+    "\n",
+    "![LSTM](images/other/lstm.JPG)"
    ]
   }
  ],
