--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Next Model Ensemble-Regressions\n",
+    "# Next Model: Ensemble-Regressions\n",
     "\n",
     "At this point, the linear regression looked tempting to use, but it seemed to me that it essentially just learned to predict the next day using the current day's temperature. I wanted to try a more complex mode, and so I decided to move on to ensemble regressions. XGBoost specifically did well, and it did not look like the model was just learning to predict the next day's temperature using the current day's temperature.\n",
     "\n",
