--- a/Common Task/organized/run.ipynb
+++ b/Common Task/organized/run.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import *\n",
-    "from models.utils import *\n",
-    "from models.training_utils import *\n",
+    "from df_utils import *\n",
+    "from training_utils import *\n",
+    "from kalshi_utils import *\n",
     "import torch\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,32 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'training_utils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m./models/weights/Austin_attn_lstm.pt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\Spring 2024\\CS542\\Common Task\\organized\\models\\training_utils.py:354\u001b[0m, in \u001b[0;36mload_model\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    353\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_model\u001b[39m(path):\n\u001b[1;32m--> 354\u001b[0m     model \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    355\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\venv\\lib\\site-packages\\torch\\serialization.py:1026\u001b[0m, in \u001b[0;36mload\u001b[1;34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[0m\n\u001b[0;32m   1024\u001b[0m             \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m   1025\u001b[0m                 \u001b[38;5;28;01mraise\u001b[39;00m pickle\u001b[38;5;241m.\u001b[39mUnpicklingError(UNSAFE_MESSAGE \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(e)) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 1026\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m _load(opened_zipfile,\n\u001b[0;32m   1027\u001b[0m                      map_location,\n\u001b[0;32m   1028\u001b[0m                      pickle_module,\n\u001b[0;32m   1029\u001b[0m                      overall_storage\u001b[38;5;241m=\u001b[39moverall_storage,\n\u001b[0;32m   1030\u001b[0m                      \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mpickle_load_args)\n\u001b[0;32m   1031\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mmap:\n\u001b[0;32m   1032\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmmap can only be used with files saved with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1033\u001b[0m                        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`torch.save(_use_new_zipfile_serialization=True), \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1034\u001b[0m                        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mplease torch.save your checkpoint with this option in order to use mmap.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\venv\\lib\\site-packages\\torch\\serialization.py:1438\u001b[0m, in \u001b[0;36m_load\u001b[1;34m(zip_file, map_location, pickle_module, pickle_file, overall_storage, **pickle_load_args)\u001b[0m\n\u001b[0;32m   1436\u001b[0m unpickler \u001b[38;5;241m=\u001b[39m UnpicklerWrapper(data_file, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mpickle_load_args)\n\u001b[0;32m   1437\u001b[0m unpickler\u001b[38;5;241m.\u001b[39mpersistent_load \u001b[38;5;241m=\u001b[39m persistent_load\n\u001b[1;32m-> 1438\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43munpickler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1440\u001b[0m torch\u001b[38;5;241m.\u001b[39m_utils\u001b[38;5;241m.\u001b[39m_validate_loaded_sparse_tensors()\n\u001b[0;32m   1441\u001b[0m torch\u001b[38;5;241m.\u001b[39m_C\u001b[38;5;241m.\u001b[39m_log_api_usage_metadata(\n\u001b[0;32m   1442\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtorch.load.metadata\u001b[39m\u001b[38;5;124m\"\u001b[39m, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mserialization_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: zip_file\u001b[38;5;241m.\u001b[39mserialization_id()}\n\u001b[0;32m   1443\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\venv\\lib\\site-packages\\torch\\serialization.py:1431\u001b[0m, in \u001b[0;36m_load.<locals>.UnpicklerWrapper.find_class\u001b[1;34m(self, mod_name, name)\u001b[0m\n\u001b[0;32m   1429\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m   1430\u001b[0m mod_name \u001b[38;5;241m=\u001b[39m load_module_mapping\u001b[38;5;241m.\u001b[39mget(mod_name, mod_name)\n\u001b[1;32m-> 1431\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmod_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'training_utils'"
-     ]
-    }
-   ],
-   "source": [
-    "load_model('./models/weights/Austin_attn_lstm.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,46 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DtypeWarning: Columns (13,28) have mixed types. Specify dtype option on import or set low_memory=False.\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'training_utils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m daily_df, daily_df_2, daily_df_3, all_df, predictor_final \u001b[38;5;241m=\u001b[39m load_all_dfs(noaa_path, om_path, solar_path, wrh_path, aq_path)\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Load the models for the city\u001b[39;00m\n\u001b[1;32m---> 31\u001b[0m attn_lstm_model \u001b[38;5;241m=\u001b[39m \u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mattn_lstm_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     32\u001b[0m lstm_model \u001b[38;5;241m=\u001b[39m load_model(lstm_path)\n\u001b[0;32m     33\u001b[0m scaler_features \u001b[38;5;241m=\u001b[39m load_scaler(scaler_features_path)\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\Spring 2024\\CS542\\Common Task\\organized\\models\\training_utils.py:354\u001b[0m, in \u001b[0;36mload_model\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    353\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_model\u001b[39m(path):\n\u001b[1;32m--> 354\u001b[0m     model \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    355\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\venv\\lib\\site-packages\\torch\\serialization.py:1026\u001b[0m, in \u001b[0;36mload\u001b[1;34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[0m\n\u001b[0;32m   1024\u001b[0m             \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m   1025\u001b[0m                 \u001b[38;5;28;01mraise\u001b[39;00m pickle\u001b[38;5;241m.\u001b[39mUnpicklingError(UNSAFE_MESSAGE \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(e)) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 1026\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m _load(opened_zipfile,\n\u001b[0;32m   1027\u001b[0m                      map_location,\n\u001b[0;32m   1028\u001b[0m                      pickle_module,\n\u001b[0;32m   1029\u001b[0m                      overall_storage\u001b[38;5;241m=\u001b[39moverall_storage,\n\u001b[0;32m   1030\u001b[0m                      \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mpickle_load_args)\n\u001b[0;32m   1031\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mmap:\n\u001b[0;32m   1032\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmmap can only be used with files saved with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1033\u001b[0m                        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`torch.save(_use_new_zipfile_serialization=True), \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1034\u001b[0m                        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mplease torch.save your checkpoint with this option in order to use mmap.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\venv\\lib\\site-packages\\torch\\serialization.py:1438\u001b[0m, in \u001b[0;36m_load\u001b[1;34m(zip_file, map_location, pickle_module, pickle_file, overall_storage, **pickle_load_args)\u001b[0m\n\u001b[0;32m   1436\u001b[0m unpickler \u001b[38;5;241m=\u001b[39m UnpicklerWrapper(data_file, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mpickle_load_args)\n\u001b[0;32m   1437\u001b[0m unpickler\u001b[38;5;241m.\u001b[39mpersistent_load \u001b[38;5;241m=\u001b[39m persistent_load\n\u001b[1;32m-> 1438\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43munpickler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1440\u001b[0m torch\u001b[38;5;241m.\u001b[39m_utils\u001b[38;5;241m.\u001b[39m_validate_loaded_sparse_tensors()\n\u001b[0;32m   1441\u001b[0m torch\u001b[38;5;241m.\u001b[39m_C\u001b[38;5;241m.\u001b[39m_log_api_usage_metadata(\n\u001b[0;32m   1442\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtorch.load.metadata\u001b[39m\u001b[38;5;124m\"\u001b[39m, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mserialization_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: zip_file\u001b[38;5;241m.\u001b[39mserialization_id()}\n\u001b[0;32m   1443\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\kmfoc\\My Drive\\BU Files\\BU Masters\\Work\\venv\\lib\\site-packages\\torch\\serialization.py:1431\u001b[0m, in \u001b[0;36m_load.<locals>.UnpicklerWrapper.find_class\u001b[1;34m(self, mod_name, name)\u001b[0m\n\u001b[0;32m   1429\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m   1430\u001b[0m mod_name \u001b[38;5;241m=\u001b[39m load_module_mapping\u001b[38;5;241m.\u001b[39mget(mod_name, mod_name)\n\u001b[1;32m-> 1431\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmod_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'training_utils'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 2: Get city info and iterate through the cities\n",
     "# The workflow will be as follows:\n",
     "# 1. Load the data for the city - done\n",
     "# 2. Load the models for the city - done\n",
-    "# 3. Look at the new data entry\n",
-    "# 4. Predict the new data entry, update model weights, and save the model weights\n",
-    "# 5. Predict the next day's data entry\n",
-    "# 6. Place a bet on Kalshi\n",
+    "# 3. Predict the next day's data entry - done\n",
+    "# 4. Place a bet on Kalshi\n",
     "city_info = get_city_info()\n",
+    "kalshi = KalshiAPI()\n",
     "\n",
     "for city in city_info.keys():\n",
-    "    if city != 'Austin':\n",
-    "        continue\n",
     "    # Get paths for the city data\n",
     "    noaa_path = city_info[city]['noaa']\n",
     "    om_path = city_info[city]['om']\n",
@@ -161,7 +111,10 @@
     "    solar_path = city_info[city]['ss']\n",
     "    attn_lstm_path = city_info[city]['attn_lstm']\n",
     "    lstm_path = city_info[city]['lstm']\n",
+    "    xgb_path = city_info[city]['xgb']\n",
     "    scaler_features_path = city_info[city]['scaler']\n",
+    "    kalshi_ticker = city_info[city]['kalshi']\n",
+    "    history_path = city_info[city]['history']\n",
     "    \n",
     "    # Load the data for the city\n",
     "    # all_df is the main dataframe that contains all the data combined. I included subsets of the dataframes as well,\n",
@@ -172,6 +125,7 @@
     "    # Load the models for the city\n",
     "    attn_lstm_model = load_model(attn_lstm_path)\n",
     "    lstm_model = load_model(lstm_path)\n",
+    "    xgb_model = load_xgb(xgb_path)\n",
     "    scaler_features = load_scaler(scaler_features_path)\n",
     "    \n",
     "    # Prepare the data for prediction (using prep_data for ease sequence creation)\n",
@@ -204,27 +158,18 @@
     "    # turn the last sequence into a tensor\n",
     "    last_sequence = torch.FloatTensor(last_sequence).unsqueeze(0)\n",
     "    \n",
-    "    # Predict the new data entry\n",
-    "    # Predict using the attention LSTM model, then update its weights\n",
-    "    attn_lstm_model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        attn_lstm_output = attn_lstm_model(last_sequence)\n",
-    "    attn_lstm_output = attn_lstm_output.item()\n",
-    "\n",
-    "    # Predict using the LSTM model, then update its weights\n",
-    "    lstm_model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        lstm_output = lstm_model(last_sequence)\n",
-    "    lstm_output = lstm_output.item()\n",
-    "    \n",
     "    # Update the last sequence, by popping the first element and appending the new prediction\n",
     "    last_sequence = last_sequence.squeeze(0).tolist()\n",
     "    last_sequence.pop(0)\n",
-    "    predictor_final = predictor_final.to_numpy().tolist()\n",
-    "    last_sequence.append(predictor_final)\n",
+    "    predictor_feature = predictor_final.drop(labels=columns_to_ignore)\n",
+    "    predictor_feature = predictor_feature.fillna(0)\n",
+    "    # reshape to (1, -1) for the scaler\n",
+    "    predictor_feature = predictor_feature.values.reshape(1, -1)\n",
+    "    predictor_feature = scaler_features.transform(predictor_feature).tolist()[0]\n",
+    "    last_sequence.append(predictor_feature)\n",
     "    last_sequence = torch.FloatTensor([last_sequence])\n",
     "    \n",
-    "    # predict using the updated models\n",
+    "    # predict using the models\n",
     "    attn_lstm_model.eval()\n",
     "    with torch.no_grad():\n",
     "        attn_lstm_output = attn_lstm_model(last_sequence)\n",
@@ -233,9 +178,28 @@
     "    with torch.no_grad():\n",
     "        lstm_output = lstm_model(last_sequence)\n",
     "    lstm_output = lstm_output.item()\n",
+    "    # predict with xgb\n",
+    "    xgb_output = xgb_model.predict(np.array(predictor_feature).reshape(1, -1))\n",
+    "    xgb_output = xgb_output[0]\n",
     "    \n",
-    "    # mean of the two predictions\n",
-    "    prediction = (attn_lstm_output + lstm_output) / 2"
+    "    # mean of the predictions\n",
+    "    prediction = (attn_lstm_output + lstm_output + xgb_output) / 3\n",
+    "\n",
+    "    # Proceed to Kalshi.\n",
+    "    # 1 update old settlements for bookkeeping\n",
+    "    kalshi.update_old_orders(history_path)\n",
+    "    \n",
+    "    # 2. check market status\n",
+    "    exchange_status = kalshi.get_exchange_status()\n",
+    "    if exchange_status.trading_active:\n",
+    "        # get event\n",
+    "        event = kalshi.format_event_ticker(kalshi_ticker)\n",
+    "        # get markets\n",
+    "        markets = kalshi.get_event_markets(event)\n",
+    "        # place bets\n",
+    "        order_list = kalshi.place_orders(prediction, markets)\n",
+    "        # log the orders\n",
+    "        kalshi.log_order(order_list, history_path)    "
    ]
   }
  ],
