run script complete

--- a/Common Task/organized/run.ipynb
+++ b/Common Task/organized/run.ipynb
@@ -89,9 +89,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DtypeWarning: Columns (20,27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48.340936024983726\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DtypeWarning: Columns (22,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81.99102020263672\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 2: Get city info and iterate through the cities\n",
     "# The workflow will be as follows:\n",
@@ -103,6 +134,8 @@
     "kalshi = KalshiAPI()\n",
     "\n",
     "for city in city_info.keys():\n",
+    "    if city == \"Austin\" or city == \"Chicago\":\n",
+    "        continue\n",
     "    # Get paths for the city data\n",
     "    noaa_path = city_info[city]['noaa']\n",
     "    om_path = city_info[city]['om']\n",
@@ -184,7 +217,7 @@
     "    \n",
     "    # mean of the predictions\n",
     "    prediction = (attn_lstm_output + lstm_output + xgb_output) / 3\n",
-    "\n",
+    "    print(prediction)\n",
     "    # Proceed to Kalshi.\n",
     "    # 1 update old settlements for bookkeeping\n",
     "    kalshi.update_old_orders(history_path)\n",
@@ -199,7 +232,7 @@
     "        # place bets\n",
     "        order_list = kalshi.place_orders(prediction, markets)\n",
     "        # log the orders\n",
-    "        kalshi.log_order(order_list, history_path)    "
+    "        kalshi.log_order(order_list, history_path, prediction)    "
    ]
   }
  ],
