--- a/Common Task/organized/Kalshi_notebook.ipynb
+++ b/Common Task/organized/Kalshi_notebook.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
        "                  'yes_total_cost': 0}]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,28 +873,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71° or below\n",
-      "no\n",
-      "72° to 73°\n",
-      "no\n",
-      "74° to 75°\n",
-      "no\n",
-      "76° to 77°\n",
-      "yes\n",
-      "78° to 79°\n",
-      "no\n",
-      "80° or above\n",
-      "no\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Event naming\n",
     "# TICKER-YYMONTHDD\n",
@@ -975,8 +956,38 @@
     "        order_list.append(order_dict)\n",
     "    return order_list\n",
     "\n",
-    "aus_event = get_event_ticker(ausTicker)\n",
-    "aus_markets = get_event_markets(aus_event)\n"
+    "nyc_event = get_event_ticker(nycTicker)\n",
+    "nyc_markets = get_event_markets(nyc_event)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change the last char to a 6\n",
+    "nyc_event = get_event_ticker(nycTicker)[:-1] + '6'\n",
+    "nyc_markets = get_event_markets(nyc_event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from df_utils import *\n",
+    "\n",
+    "path = 'history/Austin_history.csv'\n",
+    "city_info = get_city_info()\n",
+    "\n",
+    "for city in city_info:\n",
+    "    history_path = city_info[city]['history']\n",
+    "    df = pd.read_csv(history_path)\n",
+    "    df['date_time'] = pd.to_datetime(df['date_time'], format='mixed')\n",
+    "    df.to_csv(history_path, index=False)"
    ]
   }
  ],
